update footer and layout to hide footer while on /submit route on mobile devices, minor fixes

--- a/src/Components/layout/Footer.module.scss
+++ b/src/Components/layout/Footer.module.scss
@@ -93,6 +93,12 @@
   }
 }
 
+@media screen and (max-width: 548px) {
+.mobile-submit {
+    display: none;
+  } 
+} 
+
 @media print {
   .footer {
     display: none;
