--- a/src/Components/layout/Layout.module.scss
+++ b/src/Components/layout/Layout.module.scss
@@ -1,3 +1,7 @@
 .main {
     min-height: calc(100vh - var(--nav-height) - var(--footer-height));
 }
+
+.main-no-ftr {
+    min-height: calc(100vh - var(--nav-height));
+}
